--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -150,6 +150,13 @@ effort to keep =$PATH= manipulation out of your =.zshrc=.
   )
 #+end_src
 
+** org-recent-headings
+#+begin_src emacs-lisp
+     (use-package org-recent-headings
+      :straight (org-recent-headings :type git :host github :repo "alphapapa/org-recent-headings")
+      :hook ((org-mode) . org-recent-headings-mode )      )
+#+end_src
+
 ** jenkinsfile-mode
 #+begin_src emacs-lisp
 (use-package groovy-mode)
