--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
@@ -32,11 +32,12 @@
      ("o"   projectile-multi-occur "Occur in project")
      ("g"   counsel-projectile-git-grep "git grep")
      ("r" counsel-fzf "fzf")
+     ("h" org-recent-headings)
      )
 
     "Buffers"
     (("k"   projectile-kill-buffers "Kill project")
-     ("h" magit-log-buffer-file "git file log")
+     ("l" magit-log-buffer-file "git file log")
      ("i" (ibuffer t nil nil t) "ibuffer"))
 
     "Projectile"
