--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
@@ -18,7 +18,7 @@
     "Open dired in another window to the right of the current one, but do not bring focus there."
     (interactive) (save-excursion (with-selected-window (split-window-right)(balance-windows) (dired  default-directory))))
 
-  (pretty-hydra-define hydra-projectile (:title "Quick Navigation" :quit-key "<XF86Launch8>")
+  (pretty-hydra-define hydra-projectile (:title "Quick Navigation" :color teal :quit-key "<XF86Launch8>")
     ("Open"
      (("f"   counsel-projectile-find-file-dwim "Find project file")
       ("z"   counsel-projectile-switch-to-buffer "Switch to project buffer")
