--- a/emacs-nougat/nougat/packages/ivy/ivy.org
+++ b/emacs-nougat/nougat/packages/ivy/ivy.org
@@ -4,7 +4,9 @@
     :bind (("C-s" . swiper-isearch)
            ("C-r" . swiper-backward)
            ("M-%" . anzu-query-replace))
-    )
+  :config
+  (setq ivy-display-style 'fancy)
+  )
 
   (use-package ivy
     :bind ( ("C-x b" . ivy-switch-buffer)))
