--- a/emacs-nougat/nougat/packages/org-mode/extras/org-babel.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/org-babel.org
@@ -1,12 +1,13 @@
 * org-babel
 ** add languages to babel
 #+begin_src emacs-lisp
-  (org-babel-do-load-languages
-   'org-babel-load-languages
-   '((shell . t)
-     (emacs-lisp . t)
-     (sqlite . t)
-     (python . t)))
+    (org-babel-do-load-languages
+     'org-babel-load-languages
+     '((shell . t)
+       (emacs-lisp . t)
+       (sqlite . t)
+       (python . t)
+       (restclient . t )))
 #+end_src
 
 
