--- a/emacs-nougat/nougat/emacs/dired.org
+++ b/emacs-nougat/nougat/emacs/dired.org
@@ -3,7 +3,10 @@
 ** dired-sort-dirs
 Dired sorting should lump directories first because I'm used to it.
 #+begin_src emacs-lisp
-    (setq dired-listing-switches "-alh --group-directories-first")
+      (setq dired-listing-switches "-alh --group-directories-first")
+    (general-define-key
+     :keymaps 'dired-mode-map
+     "C-c w" 'dired-toggle-read-only)
 #+end_src
 ** transparently create directories when renaming
 #+begin_src emacs-lisp
