--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
@@ -18,27 +18,34 @@
       "Open dired in another window to the right of the current one, but do not bring focus there."
       (interactive) (save-excursion (with-selected-window (split-window-right)(balance-windows) (dired  default-directory))))
 
+  (defun gv/counsel-fzf-with-prefix-arg () "Prompt for root fzf directory"
+         (interactive)
+         (setq current-prefix-arg '(4))
+         (call-interactively 'counsel-fzf))
+
     (pretty-hydra-define hydra-projectile (:title "Quick Navigation" :color teal :quit-key "<XF86Launch8>")
       ("Open"
        (("f"   counsel-projectile-find-file-dwim "Find project file")
         ("z"   counsel-projectile-switch-to-buffer "Switch to project buffer")
         ("w"   counsel-projectile-switch-project "Switch project")
-        ("v"   projectile-run-vterm-other-window "Vterm in project")
-        ("d"   dired-open-other-window "Dired in project"))
+        ("v"   vterm-other-window "vterm in project")
+        ("d"   dired-open-other-window "dired in project"))
 
       "Search"
       (("a"   counsel-projectile-rg "rg in project")
-       ("A" counsel-rg "rg")
+       ("A"   counsel-rg "rg")
        ("o"   projectile-multi-occur "Occur in project")
        ("g"   counsel-projectile-git-grep "git grep")
-       ("r" counsel-fzf "fzf")
-       ("h" org-recent-headings)
+       ("r"   counsel-fzf "fzf here")
+       ("R"   gv/counsel-fzf-with-prefix-arg "fzf anywhere")
+       ("h"   org-recent-headings)
        )
 
       "Buffers"
       (("k"   projectile-kill-buffers "Kill project")
        ("l" magit-log-buffer-file "git file log")
-       ("i" (ibuffer t nil nil t) "ibuffer")
+       ("I" (ibuffer t nil nil t) "ibuffer indirect")
+       ("i" (ibuffer t nil nil nil) "ibuffer direct")
        ("j" zoom-window-zoom "zoom"))
 
       "Projectile"
