--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -143,6 +143,41 @@ Configuration related core editor functions are here.
 #+INCLUDE: "../nougat/emacs/ws-butler.org" :minlevel 2
 #+INCLUDE: "../nougat/emacs/avy.org" :minlevel 2
 
+** multiple-cursors
+[[https://github.com/magnars/multiple-cursors.el][Multiple Cursors]] is an emacs package to provide Sublime Text-like multiple selections.
+
+#+begin_src emacs-lisp
+  (use-package region-bindings-mode
+    :config (region-bindings-mode-enable))
+#+end_src
+#+begin_src emacs-lisp
+  (use-package expand-region
+   :straight (expand-region :type git :host github :repo "magnars/expand-region.el")
+   :bind (("M-2" . er/expand-region))
+ :config (pending-delete-mode 1
+   ))
+
+#+end_src
+#+begin_src emacs-lisp
+  (use-package multiple-cursors
+    :bind (:map region-bindings-mode-map
+                ("a" . mc/mark-all-like-this)
+                ("p" . mc/mark-previous-like-this)
+                ("n" . mc/mark-next-like-this)
+                ("P" . mc/unmark-previous-like-this)
+                ("N" . mc/unmark-next-like-this)
+                ("[" . mc/cycle-backward)
+                ("]" . mc/cycle-forward)
+                ("m" . mc/mark-more-like-this-extended)
+                ("h" . mc-hide-unmatched-lines-mode)
+                ("\\" . mc/vertical-align-with-space)
+                ("#" . mc/insert-numbers) ; use num prefix to set the starting number
+                ("^" . mc/edit-beginnings-of-lines)
+                ("$" . mc/edit-ends-of-lines))
+  :bind (("M-3" . mc/mark-next-like-this
+  )))
+#+end_src
+
 ** general
 #+begin_src emacs-lisp
     (use-package general
@@ -175,36 +210,10 @@ effort to keep =$PATH= manipulation out of your =.zshrc=.
 #+begin_src emacs-lisp
 (use-package smex)
 #+end_src
-** COMMENT prism
-#+begin_src emacs-lisp
-  (use-package prism
-    :straight (prism :type git :host github :repo "alphapapa/prism.el")
-
-    :hook ((emacs-lisp-mode) . prism-mode )
-    :config
-    (prism-set-colors
-      :num 24
-      :colors (list "#ffb4ac" "#e5786d" "#834c98" "#a4b5e6" "#7ec98f" "#8ac6f2")
-    ;;   ;; :desaturations (cl-loop for i from 0 below 24
-    ;;   ;;                        collect (* i 2.5))
-    ;;   ;; :lightens (cl-loop for i from 0 below 24
-    ;;   ;;                   collect (* i 2.5))
-    ;;   )
-   )
-#+end_src
 ** rainbow-mode
 #+begin_src emacs-lisp
   (use-package rainbow-mode
     :hook ((org-mode emacs-lisp-mode) . rainbow-mode))
-#+end_src
-** expand-region
-#+begin_src emacs-lisp
-    (use-package expand-region
-     :straight (expand-region :type git :host github :repo "magnars/expand-region.el")
-    :bind (("M-2" . er/expand-region)
-           ("M-3" . er/contract-region)
-    ))
-  (setq pending-delete-mode t)
 #+end_src
 ** highlight-indent-guides
 #+begin_src emacs-lisp
@@ -519,70 +528,6 @@ Line numbers are good.
     (setq-default display-line-numbers-width 4)
 #+end_src
 
-** COMMENT buffer-move
-#+CAPTION: Move buffers around more easily
-#+begin_src emacs-lisp
-  (use-package buffer-move
-  :straight(buffer-move
-  :type git
-  :host github
-  :repo "lukhas/buffer-move"))
-
-  ;; ((global-set-key (kbd "<C-S-up>")     'buf-move-up)
-  ;; (global-set-key (kbd "<C-S-down>")   'buf-move-down)
-  ;; (global-set-key (kbd "<C-S-left>")   'buf-move-left)
-  ;; (global-set-key (kbd "<C-S-right>")  'buf-move-right)
-  ;; ;;(setq buffer-move-stay-after-swap t)
-  ;; ;;(setq buffer-move-behavior 'move)
-  ;; )
-#+end_src
-
-** COMMENT sr-speedbar
-#+include: "../nougat/emacs/srspeedbar.org"
-
-#+begin_src emacs-lisp
-(setq speedbar-initial-expansion-list-name "quick buffers")
-(global-set-key (kbd "M-1") 'sr-speedbar-toggle)
-#+end_src
-
-** COMMENT dashboard
-[[https://github.com/emacs-dashboard/emacs-dashboard][dashboard]] is a pretty cute splash screen mode for emacs that's a nice way to jump
-between projects.
-#+begin_src emacs-lisp
-  (use-package dashboard
-    :straight (dashboard :type git
-                         :host github
-                         :repo "emacs-dashboard/emacs-dashboard")
-    :config
-    (when (display-graphic-p) (dashboard-setup-startup-hook)))
-
-    (when (display-graphic-p)
-      (setq initial-buffer-choice (lambda () (get-buffer "*dashboard*")))
-      (setq dashboard-center-content t)
-      (setq dashboard-items '((recents  . 5)
-                              (bookmarks . 5)
-                              (projects . 5)
-                              (agenda . 5)
-                              ;;                        (registers . 5)
-                              ))
-      (setq dashboard-set-heading-icons t)
-      (setq dashboard-set-file-icons t)
-      (setq dashboard-set-navigator t)
-      (setq dashboard-set-footer nil))
-#+end_src
-
-** COMMENT awesome-tabs
-Emacs can have tabs! [[https://github.com/manateelazycat/awesome-tab][awesome tab]] provides them.
-#+begin_src emacs-lisp
-(use-package awesome-tab
-  :straight (awesome-tab :type git
-                         :host github
-                         :repo "manateelazycat/awesome-tab")
-  :config
-  (when (display-graphic-p) (awesome-tab-mode t))
-)
-#+end_src
-
 ** diff-hl
 diff-hl is a "git gutter": it hilights changed lines on the left hand side of a buffer.
 #+begin_src emacs-lisp
@@ -591,25 +536,6 @@ diff-hl is a "git gutter": it hilights changed lines on the left hand side of a 
                :host github
                :repo "dgutov/diff-hl")
  :config (global-diff-hl-mode))
-#+end_src
-
-** COMMENT shift-tab
-Sometimes it's handy to go back exactly a tab width.
-
-#+begin_src emacs-lisp
-(global-set-key (kbd "<S-tab>") 'un-indent-by-tab-width)
-(defun un-indent-by-tab-width ()
-  "remove 4 spaces from beginning of of line"
-  (interactive)
-  (save-excursion
-    (save-match-data
-      (beginning-of-line)
-      ;; get rid of tabs at beginning of line
-      (when (looking-at "^\\s-+")
-        (untabify (match-beginning 0) (match-end 0)))
-      (when (concat "^" (make-string tab-width ?\ ))
-        (replace-match "")))))
-
 #+end_src
 
 ** webpaste
@@ -905,42 +831,6 @@ Saves to a temp file and puts the filename in the kill ring."
  )
 #+end_src
 
-** COMMENT centered-cursor
-From [[https://two-wrongs.com/centered-cursor-mode-in-vanilla-emacs][centered-cursor in vanilla emacs]], ape centered cursor mode with some speedups
-#+begin_src emacs-lisp
-(setq scroll-preserve-screen-position t
-      scroll-conservatively 0
-      maximum-scroll-margin 0.5
-      scroll-margin 99999)
-#+end_src
-
-** COMMENT perspective
-#+begin_src emacs-lisp
-(use-package perspective
-  :config
-  (persp-mode))
-#+end_src
-
-** COMMENT eyebrowse
-[[https://depp.brause.cc/eyebrowse/][eyebrowse]]
-#+begin_src emacs-lisp
-(use-package eyebrowse
- :init (setq eyebrowse-keymap-prefix (kbd"C-x e"))
- :config
- (eyebrowse-mode t)
- (setq eyebrowse-wrap-around t)
- (setq eyebrowse-switch-back-and-forth t)
-     )
-#+end_src
-
-** COMMENT polymode
-
-#+begin_src emacs-lisp
-  (use-package poly-org
-  :ensure t
-       )
-#+end_src
-
 * projectile
 [[https://github.com/bbatsov/projectile][projectile]] is a project interaction library for emacs.
 
@@ -979,17 +869,6 @@ Override default project directory path.
 ##+INCLUDE: "../nougat/packages/org-mode/extras/org-roam.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-download.org"
 #+include: "../nougat/packages/org-mode/extras/ox-hugo.org"
-** COMMENT org-jira
-
-#+begin_src emacs-lisp
-(use-package org-jira
- :straight (org-jira :type git
-               :host github
-               :repo "ahungry/org-jira")
- :config (setq jiralib-url "https://neurala.atlassian.net")
-     )
-#+end_src
-
 ** strikethrough-done
 Render org TODO states in the DONE category with struck-through text with a handy
 color scheme.
@@ -1086,32 +965,6 @@ for quickly applying export settings, annotating code blocks, and the like.
 ** github
 *** gist
 #+INCLUDE: "../nougat/packages/github/gist.org"
-* multiple-cursors
-[[https://github.com/magnars/multiple-cursors.el][Multiple Cursors]] is an emacs package to provide Sublime Text-like multiple selections.
-
-#+begin_src emacs-lisp
-  (use-package region-bindings-mode)
-#+end_src
-
-#+begin_src emacs-lisp
-  (use-package multiple-cursors
-    :bind (:map region-bindings-mode-map
-                ("a" . mc/mark-all-like-this)
-                ("p" . mc/mark-previous-like-this)
-                ("n" . mc/mark-next-like-this)
-                ("P" . mc/unmark-previous-like-this)
-                ("N" . mc/unmark-next-like-this)
-                ("[" . mc/cycle-backward)
-                ("]" . mc/cycle-forward)
-                ("m" . mc/mark-more-like-this-extended)
-                ("h" . mc-hide-unmatched-lines-mode)
-                ("\\" . mc/vertical-align-with-space)
-                ("#" . mc/insert-numbers) ; use num prefix to set the starting number
-                ("^" . mc/edit-beginnings-of-lines)
-                ("$" . mc/edit-ends-of-lines))
-  )
-#+end_src
-
 * pandoc mode
 #+INCLUDE: "../nougat/packages/pandoc-mode/pandoc-mode.org"
 * language support
@@ -1200,10 +1053,6 @@ LSP is the language server protocol
 )
 #+end_src
 
-*** COMMENT jedi
-#+INCLUDE: "../nougat/support/python/jedi.org"
-*** COMMENT elpy
-#+INCLUDE: "../nougat/support/python/elpy.org"
 ** markdown
 #+INCLUDE: "../nougat/support/markdown/markdown-mode.org"
 *** markdown-toc
