--- a/emacs-nougat/nougat/support/lisp/lispy-mode.org
+++ b/emacs-nougat/nougat/support/lisp/lispy-mode.org
@@ -14,6 +14,7 @@
 
       :hook
       (emacs-lisp-mode . lispy-mode)
+      (racket-mode . lispy-mode)
 
       :config
       (use-package adjust-parens
