--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -184,6 +184,24 @@ Configuration related core editor functions are here.
 
 #+RESULTS:
 
+** make directories on the fly
+#+begin_src emacs-lisp
+(defadvice find-file (before make-directory-maybe (filename &optional wildcards) activate)
+  "Create parent directory if not exists while visiting file."
+  (unless (file-exists-p filename)
+    (let ((dir (file-name-directory filename)))
+      (unless (file-exists-p dir)
+        (make-directory dir t))))) ;; todo change this to prompt?
+#+end_src
+
+** unicode-fonts
+#+begin_src emacs-lisp
+  (use-package unicode-fonts
+     :ensure t
+     :config
+      (unicode-fonts-setup)
+      (set-fontset-font t 'symbol "Noto Color Emoji"))
+#+end_src
 ** exec-path from shell
 [[https://github.com/purcell/exec-path-from-shell][This]] is a GNU Emacs library to ensure environment variables inside Emacs look the
 same as in the user's shell.  This is useful when, like me, you don't really make an
@@ -1009,6 +1027,13 @@ LSP is the language server protocol
 #+INCLUDE: "../nougat/support/latex/latex.org"
 ** lisp
 #+INCLUDE: "../nougat/support/lisp/lispy-mode.org"
+*** racket
+#+begin_src emacs-lisp
+  (use-package racket-mode
+   :config (setq tab-always-indent 'complete))
+#+end_src
+
+
 ** yaml
 #+CAPTION:
 #+begin_src emacs-lisp
@@ -1111,7 +1136,7 @@ From [[https://github.com/dsedivec/dot-emacs-d/blob/master/lisp/window-hydra.el]
     ^_i_^                  _1_ single window   _3_^ split window      _b_alance windows
   _j_   _l_  move buffer   _o_ther window      _\\_ transpose frame   s_w_ap window
     ^_k_^                  _←_ winner-undo     _0_^ delete window     _→_ winner redo
-  "
+                                               _c_ clone indirect"
     ("i" (aw-swap-window (windmove-find-other-window 'up)))
     ("j" (aw-swap-window (windmove-find-other-window 'left)))
     ("l" (aw-swap-window (windmove-find-other-window 'right)))
@@ -1120,6 +1145,7 @@ From [[https://github.com/dsedivec/dot-emacs-d/blob/master/lisp/window-hydra.el]
     ("3" split-window-right)
     ("b" balance-windows)
     ("o" ace-window)
+    ("c" clone-indirect-buffer-other-window)
     ("\\" transpose-frame)
     ("w" ace-swap-window)
     ("<left>" winner-undo)
@@ -1129,7 +1155,7 @@ From [[https://github.com/dsedivec/dot-emacs-d/blob/master/lisp/window-hydra.el]
 
   (provide 'window-hydra)
 
-  (global-set-key (kbd "C-M-_") 'window-hydra/body)
+  (global-set-key (kbd "<XF86Launch9>") 'window-hydra/body)
 #+end_src
 
 ** COMMENT Other hydras
