--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
@@ -28,8 +28,10 @@
        (("f"   counsel-projectile-find-file-dwim "Find project file")
         ("z"   counsel-projectile-switch-to-buffer "Switch to project buffer")
         ("w"   counsel-projectile-switch-project "Switch project")
-        ("v"   vterm-other-window "vterm in project")
-        ("d"   dired-open-other-window "dired in project"))
+        ("V"   vterm-other-window "vterm indirect")
+        ("v"   vterm "vterm")
+        ("D"   dired-open-other-window "dired indirect")
+        ("d"   dired "dired"))
 
       "Search"
       (("a"   counsel-projectile-rg "rg in project")
@@ -45,14 +47,16 @@
       (("k"   projectile-kill-buffers "Kill project")
        ("l" magit-log-buffer-file "git file log")
        ("I" (ibuffer t nil nil t) "ibuffer indirect")
-       ("i" (ibuffer t nil nil nil) "ibuffer direct")
+       ("i" (ibuffer t nil nil nil) "ibuffer")
        ("j" zoom-window-zoom "zoom"))
 
       "Projectile"
       (("C"   projectile-invalidate-cache "Rebuild cache")
        ("x"   projectile-remove-known-project "Remove projects")
        ("X"   projectile-cleanup-known-projects "Cleanup"))
-      )
+    "Visual styling"
+  (("t" display-fill-column-indicator-mode "column marker"))
+  )
     )
 
     (global-set-key (kbd "<XF86Launch8>") 'hydra-projectile/body)
