--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -587,12 +587,18 @@ nominally hilight lines that have todo in them
          )
 #+end_src
 
-** Highlight row
+** Highlight row, column marker
 Hilight the row the mark is on.
 #+begin_src emacs-lisp
     (global-hl-line-mode)
     (set-face-background 'hl-line "gray22")
+#+end_src
 
+#+begin_src emacs-lisp
+    (add-hook 'prog-mode-hook #'display-fill-column-indicator-mode)
+    (add-hook 'org-mode-hook #'display-fill-column-indicator-mode)
+    (set-face-foreground 'fill-column-indicator "gray22")
+    (setq display-fill-column-indicator-character "|")
 #+end_src
 
 ** control font size with mouse
@@ -673,7 +679,11 @@ Add fancy modeline, because why not.
 
 ** pdf-tools
 #+begin_src emacs-lisp
-(use-package pdf-tools)
+    (use-package pdf-tools
+      :mode ("\\.pdf$" . pdf-view-mode)
+      :config
+      (pdf-tools-install)
+      (add-hook 'TeX-after-compilation-finished-functions #'TeX-revert-document-buffer))
 #+end_src
 ** crux
 #+begin_src emacs-lisp
@@ -1124,38 +1134,69 @@ LSP is the language server protocol
 From [[https://github.com/dsedivec/dot-emacs-d/blob/master/lisp/window-hydra.el][here]]
 #+begin_src emacs-lisp
   (use-package windmove)
-  (use-package ace-window
-    :bind* (("C-<tab>" . ace-window)))
+   (use-package transpose-frame)
+       (use-package ace-window
+         :bind* (("C-<tab>" . ace-window)))
 
-  (require 'windmove)
-  (require 'ace-window)
+       (require 'windmove)
+       (require 'ace-window)
+     (pretty-hydra-define window-hydra (:title "Navigation" :color teal :quit-key "<XF86Launch9>")
+       ("Move window"
+        (    ("I" windmove-swap-states-up "up" )
+             ("J" windmove-swap-states-left "left" )
+             ("L" windmove-swap-states-down "down" )
+             ("K" windmove-swap-states-right "right" )
+       )
+      "Move focus"
+         (    ("i" windmove-up "up" :color red)
+              ("j" windmove-left "left" :color red)
+              ("k" windmove-down "down" :color red)
+              ("l" windmove-right "right" :color red)
+       )
+      "Modify"
+      (
+       ("c" clone-indirect-buffer-other-window "clone indirect")
+       ("C" clone-indirect-buffer "clone")
+       ("0" delete-window "delete this window")
+       ("1" delete-other-windows "delete other windows")
+       ("w" ace-swap-window "swap window")
+       )
+    "winner-mode"
+    (
+     ("<right>" winner-redo "redo")
+     ("<left>" winner-undo "undo")
+     )
 
-  ;;;###autoload (autoload 'window-hydra/body "window-hydra" nil t)
-  (defhydra window-hydra (:hint nil)
-    "
-    ^_i_^                  _1_ single window   _3_^ split window      _b_alance windows
-  _j_   _l_  move buffer   _o_ther window      _\\_ transpose frame   s_w_ap window
-    ^_k_^                  _←_ winner-undo     _0_^ delete window     _→_ winner redo
-                                               _c_ clone indirect"
-    ("i" (aw-swap-window (windmove-find-other-window 'up)))
-    ("j" (aw-swap-window (windmove-find-other-window 'left)))
-    ("l" (aw-swap-window (windmove-find-other-window 'right)))
-    ("k" (aw-swap-window (windmove-find-other-window 'down)))
-    ("1" delete-other-windows)
-    ("3" split-window-right)
-    ("b" balance-windows)
-    ("o" ace-window)
-    ("c" clone-indirect-buffer-other-window)
-    ("\\" transpose-frame)
-    ("w" ace-swap-window)
-    ("<left>" winner-undo)
-    ("0" delete-window)
-    ("<right>" winner-redo)
-    ("q" nil))
+        )
 
-  (provide 'window-hydra)
+       )
 
-  (global-set-key (kbd "<XF86Launch9>") 'window-hydra/body)
+       ;;;###autoload (autoload 'window-hydra/body "window-hydra" nil t)
+       ;; (defhydra window-hydra (:hint nil)
+       ;;   "
+       ;;   ^_i_^                  _1_ single window   _3_^ split window      _b_alance windows
+       ;; _j_   _l_  move buffer   _o_ther window      _\\_ transpose frame   s_w_ap window
+       ;;   ^_k_^                  _←_ winner-undo     _0_^ delete window     _→_ winner redo
+       ;;                                              _c_ clone indirect"
+       ;;   ("i" (aw-swap-window (windmove-find-other-window 'up)))
+       ;;   ("j" (aw-swap-window (windmove-find-other-window 'left)))
+       ;;   ("l" (aw-swap-window (windmove-find-other-window 'right)))
+       ;;   ("k" (aw-swap-window (windmove-find-other-window 'down)))
+       ;;   ("1" delete-other-windows)
+       ;;   ("3" split-window-right)
+       ;;   ("b" balance-windows)
+       ;;   ("o" ace-window)
+       ;;   ("c" clone-indirect-buffer-other-window)
+       ;;   ("\\" transpose-frame)
+       ;;   ("w" ace-swap-window)
+       ;;   ("<left>" winner-undo)
+       ;;   ("0" delete-window)
+       ;;   ("<right>" winner-redo)
+       ;;   ("q" nil))
+
+       ;; (provide 'window-hydra)
+
+       ;; (global-set-key (kbd "<XF86Launch9>") 'window-hydra/body)
 #+end_src
 
 ** COMMENT Other hydras
