--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -1134,69 +1134,83 @@ LSP is the language server protocol
 From [[https://github.com/dsedivec/dot-emacs-d/blob/master/lisp/window-hydra.el][here]]
 #+begin_src emacs-lisp
   (use-package windmove)
-   (use-package transpose-frame)
-       (use-package ace-window
-         :bind* (("C-<tab>" . ace-window)))
+     (use-package transpose-frame)
+         (use-package ace-window
+           :bind* (("C-<tab>" . ace-window)))
 
-       (require 'windmove)
-       (require 'ace-window)
-     (pretty-hydra-define window-hydra (:title "Navigation" :color teal :quit-key "<XF86Launch9>")
-       ("Move window"
-        (    ("I" windmove-swap-states-up "up" )
-             ("J" windmove-swap-states-left "left" )
-             ("L" windmove-swap-states-down "down" )
-             ("K" windmove-swap-states-right "right" )
-       )
-      "Move focus"
-         (    ("i" windmove-up "up" :color red)
-              ("j" windmove-left "left" :color red)
-              ("k" windmove-down "down" :color red)
-              ("l" windmove-right "right" :color red)
-       )
-      "Modify"
+         (require 'windmove)
+         (require 'ace-window)
+       (pretty-hydra-define window-hydra (:title "Navigation" :color teal :quit-key "<XF86Launch9>")
+         ("Move window"
+          (    ("I" windmove-swap-states-up "up" )
+               ("J" windmove-swap-states-left "left" )
+               ("L" windmove-swap-states-down "down" )
+               ("K" windmove-swap-states-right "right" )
+         )
+          "Move focus"
+          (    ("i" windmove-up "up" )
+               ("j" windmove-left "left" )
+               ("k" windmove-down "down" )
+               ("l" windmove-right "right" )
+               )
+          "Modify"
+          (
+           ("c" clone-indirect-buffer-other-window "clone indirect")
+           ("C" clone-indirect-buffer "clone")
+         ("0" delete-window "delete this window")
+         ("1" delete-other-windows "delete other windows")
+         ("2" split-window-below "split below")
+         ("3" split-window-right "split right")
+         ("w" ace-swap-window "swap window")
+         ("j" zoom-window-zoom "zoom")
+         )
+      "winner-mode"
       (
-       ("c" clone-indirect-buffer-other-window "clone indirect")
-       ("C" clone-indirect-buffer "clone")
-       ("0" delete-window "delete this window")
-       ("1" delete-other-windows "delete other windows")
-       ("w" ace-swap-window "swap window")
+       ("<right>" winner-redo "redo")
+       ("<left>" winner-undo "undo")
        )
-    "winner-mode"
-    (
-     ("<right>" winner-redo "redo")
-     ("<left>" winner-undo "undo")
-     )
+    "transpose-mode"
+  (
+   ("t" transpose-frame "transpose x/y")
+   ("v" flip-frame "flip vertically")
+   ("h" flop-frame "flip horizontally")
+   ("8" rotate-frame "rotate 180")
+   ("r" rotate-frame-clockwise "rotate clockwise")
+   ("R" rotate-frame-anticlockwise "rotate anticlockwise")
+   )
+    "Visual styling"
+    (("t" display-fill-column-indicator-mode "column marker"))
 
-        )
+          )
 
-       )
+         )
 
-       ;;;###autoload (autoload 'window-hydra/body "window-hydra" nil t)
-       ;; (defhydra window-hydra (:hint nil)
-       ;;   "
-       ;;   ^_i_^                  _1_ single window   _3_^ split window      _b_alance windows
-       ;; _j_   _l_  move buffer   _o_ther window      _\\_ transpose frame   s_w_ap window
-       ;;   ^_k_^                  _←_ winner-undo     _0_^ delete window     _→_ winner redo
-       ;;                                              _c_ clone indirect"
-       ;;   ("i" (aw-swap-window (windmove-find-other-window 'up)))
-       ;;   ("j" (aw-swap-window (windmove-find-other-window 'left)))
-       ;;   ("l" (aw-swap-window (windmove-find-other-window 'right)))
-       ;;   ("k" (aw-swap-window (windmove-find-other-window 'down)))
-       ;;   ("1" delete-other-windows)
-       ;;   ("3" split-window-right)
-       ;;   ("b" balance-windows)
-       ;;   ("o" ace-window)
-       ;;   ("c" clone-indirect-buffer-other-window)
-       ;;   ("\\" transpose-frame)
-       ;;   ("w" ace-swap-window)
-       ;;   ("<left>" winner-undo)
-       ;;   ("0" delete-window)
-       ;;   ("<right>" winner-redo)
-       ;;   ("q" nil))
+         ;;;###autoload (autoload 'window-hydra/body "window-hydra" nil t)
+         ;; (defhydra window-hydra (:hint nil)
+         ;;   "
+         ;;   ^_i_^                  _1_ single window   _3_^ split window      _b_alance windows
+         ;; _j_   _l_  move buffer   _o_ther window      _\\_ transpose frame   s_w_ap window
+         ;;   ^_k_^                  _←_ winner-undo     _0_^ delete window     _→_ winner redo
+         ;;                                              _c_ clone indirect"
+         ;;   ("i" (aw-swap-window (windmove-find-other-window 'up)))
+         ;;   ("j" (aw-swap-window (windmove-find-other-window 'left)))
+         ;;   ("l" (aw-swap-window (windmove-find-other-window 'right)))
+         ;;   ("k" (aw-swap-window (windmove-find-other-window 'down)))
+         ;;   ("1" delete-other-windows)
+         ;;   ("3" split-window-right)
+         ;;   ("b" balance-windows)
+         ;;   ("o" ace-window)
+         ;;   ("c" clone-indirect-buffer-other-window)
+         ;;   ("\\" transpose-frame)
+         ;;   ("w" ace-swap-window)
+         ;;   ("<left>" winner-undo)
+         ;;   ("0" delete-window)
+         ;;   ("<right>" winner-redo)
+         ;;   ("q" nil))
 
-       ;; (provide 'window-hydra)
+         ;; (provide 'window-hydra)
 
-       ;; (global-set-key (kbd "<XF86Launch9>") 'window-hydra/body)
+         ;; (global-set-key (kbd "<XF86Launch9>") 'window-hydra/body)
 #+end_src
 
 ** COMMENT Other hydras
