--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -706,6 +706,22 @@ Add fancy modeline, because why not.
    :bind ("M-?" . transient-dwim-dispatch)
    )
 #+end_src
+** dired-sidebar
+#+begin_src emacs-lisp
+      (use-package dired-sidebar
+       :straight (dired-sidebar :type git :host github :repo "jojojames/dired-sidebar")
+      :commands (dired-sidebar-toggle-sidebar)
+       )
+    (use-package ibuffer-sidebar
+     :straight (ibuffer-sidebar :type git :host github :repo "jojojames/ibuffer-sidebar")
+       :commands (ibuffer-sidebar-toggle-sidebar) )
+  (defun +sidebar-toggle ()
+    "Toggle both `dired-sidebar' and `ibuffer-sidebar'."
+    (interactive)
+    (dired-sidebar-toggle-sidebar)
+    (ibuffer-sidebar-toggle-sidebar))
+#+end_src
+
 ** dired-hacks
 #+begin_src emacs-lisp
     (defun grym-dired-filter-group-mode-off ()
@@ -1179,38 +1195,11 @@ From [[https://github.com/dsedivec/dot-emacs-d/blob/master/lisp/window-hydra.el]
    ("R" rotate-frame-anticlockwise "rotate anticlockwise")
    )
     "Visual styling"
-    (("t" display-fill-column-indicator-mode "column marker"))
+    (("t" display-fill-column-indicator-mode "column marker")
+     ("s" +sidebar-toggle "toggle sidebars"))
 
-          )
-
-         )
-
-         ;;;###autoload (autoload 'window-hydra/body "window-hydra" nil t)
-         ;; (defhydra window-hydra (:hint nil)
-         ;;   "
-         ;;   ^_i_^                  _1_ single window   _3_^ split window      _b_alance windows
-         ;; _j_   _l_  move buffer   _o_ther window      _\\_ transpose frame   s_w_ap window
-         ;;   ^_k_^                  _←_ winner-undo     _0_^ delete window     _→_ winner redo
-         ;;                                              _c_ clone indirect"
-         ;;   ("i" (aw-swap-window (windmove-find-other-window 'up)))
-         ;;   ("j" (aw-swap-window (windmove-find-other-window 'left)))
-         ;;   ("l" (aw-swap-window (windmove-find-other-window 'right)))
-         ;;   ("k" (aw-swap-window (windmove-find-other-window 'down)))
-         ;;   ("1" delete-other-windows)
-         ;;   ("3" split-window-right)
-         ;;   ("b" balance-windows)
-         ;;   ("o" ace-window)
-         ;;   ("c" clone-indirect-buffer-other-window)
-         ;;   ("\\" transpose-frame)
-         ;;   ("w" ace-swap-window)
-         ;;   ("<left>" winner-undo)
-         ;;   ("0" delete-window)
-         ;;   ("<right>" winner-redo)
-         ;;   ("q" nil))
-
-         ;; (provide 'window-hydra)
-
-         ;; (global-set-key (kbd "<XF86Launch9>") 'window-hydra/body)
+    ))
+  (global-set-key (kbd "<XF86Launch9>") 'window-hydra/body)
 #+end_src
 
 ** COMMENT Other hydras
